(PC-17133)[PRO] fix: banner spacing

--- a/pro/src/ui-kit/Banners/BannerLayout/NewBannerLayout.module.scss
+++ b/pro/src/ui-kit/Banners/BannerLayout/NewBannerLayout.module.scss
@@ -147,14 +147,14 @@
 
   border-radius: rem.torem(6px);
   margin: rem.torem(16px) 0;
-  padding: rem.torem(16px) rem.torem(16px) rem.torem(14px) rem.torem(14px);
+  padding: rem.torem(20px) rem.torem(16px) rem.torem(16px) rem.torem(16px);
 
   &-text {
     line-height: rem.torem(20px);
     text-align: left;
 
     &.with-margin {
-      margin-bottom: rem.torem(12px);
+      margin-bottom: rem.torem(8px);
     }
   }
 
@@ -169,7 +169,7 @@
   &-item {
     display: flex;
     &:not(:last-of-type) {
-      margin-bottom: rem.torem(16px);
+      margin-bottom: rem.torem(8px);
     }
   }
 
